Modifed ResNet50 to support CIFAR100

--- a/Dev.ipynb
+++ b/Dev.ipynb
@@ -31,6 +31,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "import ResnetModels\n",
     "\n",
     "# Choose device\n",
     "USE_GPU = True\n",
@@ -47,20 +48,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Example torch.nn.Module model\n",
-    "class Net(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, target_length):\n",
-    "        super().__init__()\n",
-    "        self.h = torch.nn.Linear(input_size, hidden_size)\n",
-    "        self.o = torch.nn.Linear(hidden_size, target_length)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.h(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.o(x)\n",
-    "        return x"
-   ]
+   "source": []
   }
  ]
 }
